--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,15 @@
 	font-family: 'Poppins', sans-serif;
 }
 
+body {
+	background-color: #6403be;
+}
+
 .header {
 	width: 100%;
-	height: 100px;
+	height: 75px;
 	padding: 10px 10px;
-	background-color: #0B0F2A;
+	background-color: #6403be;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -23,11 +27,13 @@
 
 .simple-todo {
 	width: 700px;
-	height: 750px;
+	height: 600px;
 	margin: 10px auto;
 	padding: 10px 10px;
-	box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+	box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.5);
 	position: relative;
+	background-color: #fff;
+	border-radius: 5px;
 	z-index: 1;
 }
 
@@ -42,12 +48,12 @@
 	width: 90%;
 	height: 100%;
 	outline: none;
-	background-color:#0B0F2A;
+	background-color:#fff;
 	border-style: none;
-	border-radius: 0.3rem;
+	border-bottom: 3px solid rgba(0, 0, 0, 0.2);
 	padding-left: 5px;
 	font-size: 1.2rem;
-	color: #fff;
+	color: #000;
 }
 
 #todo-input:focus {
@@ -99,20 +105,20 @@
 
 .item {
 	height: 75px;
-	background-color: #0B0F2A;
-	color: #fff;
+	background-color: #fff;
+	color: #000;
 	display: flex;
+	border-bottom: 3px solid rgba(0, 0, 0, 0.1);
 	justify-content: space-around;
 	align-items: center;
 	margin-top: 10px;
-	padding: 10px 10px;
-	border-radius: .5rem;
+	padding: 10px 0px;
 }
 
 .item p {
 	width: 60%;
 	height: 100%;
-	margin-left: -10px;
+	margin-left: -40px;
 	padding: 10px 5px;
 	overflow-y: auto;
 	overflow-x: hidden;
@@ -145,15 +151,16 @@
 
 .check {
 	width: 10%;
-	height: 35%;
+	height: 45%;
+	margin-left: -30px;	
 }
 
 .alert {
-	color: #F4CA16;
+	color: #ff4343;
 }
 
 .trash {
-	color: #ff0048;
+	color: #670097;
 }
 
 .check:hover,
@@ -163,7 +170,9 @@
 }
 
 .priority {
-	border: 3px solid #ff0000;
+	background-color: rgba(255, 0, 0, 0.2);
+	border-radius: 5px;
+	border-bottom: 0;
 }
 
 .checked {
